--- a/app/globals.css
+++ b/app/globals.css
@@ -131,6 +131,9 @@
   transform: none !important;
 }
 
-
-
+/* [data-radix-popper-content-wrapper] {
+  width: 100% !important;
+  max-width: none !important;
+  transform: translate(0) !important;
+} */
 
